--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section id="ext_menu-o" data-rv-view="57">
+<section id="ext_menu-o" data-rv-view="26">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal form</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="59" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/b">free site creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="28" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -71,17 +71,17 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-r" data-rv-view="62" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-r" data-rv-view="31" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><strong>Bin ich mit dem POS Module sicher gerüstet für die RKSV 2017?</strong></p><p>Ja. Das POSModule ist ein Addon welches einfach bei bestehenden Shopify-Lösungen dazu installiert wird. Installation und Einrichtung dauern ca. einen Werktag, da wir bei A-Trust die Daten beantragen müsssen. Dann leiten wir die an Sie weiter und Sie müssen das in Finanz.Online eintragen.</p><p><br></p><p><strong>Wie sieht der Installationsverlauf genau aus?</strong></p><p>Sie melden sich bei POSModule an. Sie geben Ihre ATU Nummer und die Anschrift an. Wir beantragen daraufhin die Zugangsdaten bei A-Trust. Danach generieren wir einen Schlüssel (AES Key) zusammen mit den Daten von A-Trust. Diesen Key senden wir an Sie. Sie sind dann dafür verantwortlich, dass der Key zusammen mit den restlichen Daten die wir Ihnen schicken bei Finanz.Online eingetragen wird.</p><p><br></p><p><strong>Kann ich mit dem POS Module auch Kassenbons ausdrucken?</strong></p><p>Bons können derzeit auf dem Star TSP650IIBT Bondrucker mittels Star WebPrnt gedruckt werden. Wir arbeiten auch an einer Lösung, dies vollautomatisch im Hintergrund zu machen. Bis es soweit ist muss man manuell nach dem Bestellvorgang in die Star WebPrnt App wechseln und den QR Code ausdrucken. A4 Rechnungen auf AirPrint fähigen Druckern können auch gedruckt werden.</p><p><br></p><p><strong>Wenn ich mehrere Standorte habe, was muss ich beachten?</strong></p><p>Bei mehreren Standorten haben Sie pro Standort einen s.g. Rechnungskreis mit POS Module. Das bedeutet, dass Umsatzzähler für das Datenerfassungsprotokoll pro Standort getrennt erfasst werden. Das heißt im Klartext: Sie benötigen pro Standort eine Kassa.&nbsp;</p><p><br></p><p><strong>Ich habe mehrere iPads im Einsatz, was muss ich beachten?</strong></p><p>Gar nicht viel! Sie können aber beliebig viele iPads pro Standort einsetzen. Die Kassen beziehen sich auf den Standort, nicht auf die im Einsatz befindlichen iPads.</p><p><br></p><p><strong>Wie sieht das mit E-Mail Rechnungen aus?</strong></p><p>Rechnungen per Email sind nicht nur erlaubt, sondern sind auch eine umweltfreundliche Alternative zum Papier. POSModule unterstützt Rechnungen per Email.&nbsp;</p><p><br></p><p><strong>Wir haben zwei Geschäfte aber nur einen Drucker, ist dies zulässig?</strong></p><p>Ja, Sie können zwei verschiedene Geschäfte mit zwei verschiedenen Shopify Benutzern über einen Drucker betreiben. Am Ende müssen Sie dem Kunden den richtigen Beleg mit der richtigen Signatur geben. Achten Sie bitte darauf: Der Star TSP650 kann sich gleichzeitig nur zu einem einzigen Gerät verbinden.</p><p><br></p><p><strong>Wie sehen die Rechnungen aus? Gibt es Vorlagen?</strong></p><p>Ja, wir stellen ein so genanntes Basis-Template zur Verfügung. Das Template selbst ist reines HTML und kann von jedem Web-Designer weiter angepasst werden. Bei einer Anpassung vergewissern Sie sich bitte, dass die Daten (QR Code, Rechnungsdatum/Uhrzeit, Produkte, Steuersätze, etc) noch richtig aufscheinen.</p><p><br></p><p><strong>Was ist die maximale Frequenz an Bons pro Tag? Warum gibt es ein Limit?</strong></p><p>Wie bieten unsere Dienste über A-Trust an. Es gibt offiziell von A-Trust drei verschiedene Zertifikate die wir selbst kaufen können. Wir bieten das Basic Zertifikat voll-automatisch zur Selbstinstallation an. Dieses ist für 10.000 Signaturen pro Jahr ausgelegt. Upgrades auf 30.000 bzw. unlimitiert viele Signaturen ist kostenpflichtig möglich. Bitte kontaktieren Sie uns.</p><p><br></p><p><strong>Ich habe noch weitere Fragen</strong></p><p>Bitte zögern Sie nicht uns zu kontaktieren. Schreiben Sie uns oder rufen Sie uns an!</p><p><br></p><p><br></p></div>
+            <div class="col-xs-12 lead"><p><strong>Bin ich mit dem POS Module sicher gerüstet für die RKSV 2017?</strong></p><p>Ja. Das POSModule ist ein Addon welches einfach bei bestehenden Shopify-Lösungen dazu installiert wird. Installation und Einrichtung dauern ca. einen Werktag, da wir bei A-Trust die Daten beantragen müsssen. Dann leiten wir die an Sie weiter und Sie müssen das in Finanz.Online eintragen.</p><p><br></p><p><strong>Wie sieht der Installationsverlauf genau aus?</strong></p><p>Sie melden sich bei POSModule an. Sie geben Ihre ATU Nummer und die Anschrift an. Wir beantragen daraufhin die Zugangsdaten bei A-Trust. Danach generieren wir einen Schlüssel (AES Key) zusammen mit den Daten von A-Trust. Diesen Key senden wir an Sie. Sie sind dann dafür verantwortlich, dass der Key zusammen mit den restlichen Daten die wir Ihnen schicken bei Finanz.Online eingetragen wird.</p><p><br></p><p><strong>Kann ich mit dem POS Module auch Kassenbons ausdrucken?</strong></p><p>Bons können derzeit auf dem Star TSP650IIBT Bondrucker mittels Star WebPrnt gedruckt werden. Wir arbeiten auch an einer Lösung, dies vollautomatisch im Hintergrund zu machen. Bis es soweit ist muss man manuell nach dem Bestellvorgang in die Star WebPrnt App wechseln und den QR Code ausdrucken. A4 Rechnungen auf AirPrint fähigen Druckern können auch gedruckt werden.</p><p><br></p><p><strong>Wenn ich mehrere Standorte habe, was muss ich beachten?</strong></p><p>Bei mehreren Standorten haben Sie pro Standort einen s.g. Rechnungskreis mit POS Module. Das bedeutet, dass Umsatzzähler für das Datenerfassungsprotokoll pro Standort getrennt erfasst werden. Das heißt im Klartext: Sie benötigen pro Standort eine Kassa.&nbsp;</p><p><br></p><p><strong>Ich habe mehrere iPads im Einsatz, was muss ich beachten?</strong></p><p>Gar nicht viel! Sie können aber beliebig viele iPads pro Standort einsetzen. Die Kassen beziehen sich auf den Standort, nicht auf die im Einsatz befindlichen iPads.</p><p><br></p><p><strong>Wie sieht das mit E-Mail Rechnungen aus?</strong></p><p>Rechnungen per Email sind nicht nur erlaubt, sondern sind auch eine umweltfreundliche Alternative zum Papier. POSModule unterstützt Rechnungen per Email.&nbsp;</p><p><br></p><p><strong>Wir haben zwei Geschäfte aber nur einen Drucker, ist dies zulässig?</strong></p><p>Ja, Sie können zwei verschiedene Geschäfte mit zwei verschiedenen Shopify Benutzern über einen Drucker betreiben. Am Ende müssen Sie dem Kunden den richtigen Beleg mit der richtigen Signatur geben. Achten Sie bitte darauf: Der Star TSP650 kann sich gleichzeitig nur zu einem einzigen Gerät verbinden.</p><p><br></p><p><strong>Wie sehen die Rechnungen aus? Gibt es Vorlagen?</strong></p><p>Ja, wir stellen ein so genanntes Basis-Template zur Verfügung. Das Template selbst ist reines HTML und kann von jedem Web-Designer weiter angepasst werden. Bei einer Anpassung vergewissern Sie sich bitte, dass die Daten (QR Code, Rechnungsdatum/Uhrzeit, Produkte, Steuersätze, etc) noch richtig aufscheinen.</p><p><br></p><p><strong>Was ist die maximale Frequenz an Bons pro Tag? Warum gibt es ein Limit?</strong></p><p>Wie bieten unsere Dienste über A-Trust an. Es gibt offiziell von A-Trust drei verschiedene Zertifikate die wir selbst kaufen können. Wir bieten das Basic Zertifikat voll-automatisch zur Selbstinstallation an. Dieses ist für 10.000 Signaturen pro Jahr ausgelegt. Upgrades auf 30.000 bzw. unlimitiert viele Signaturen ist kostenpflichtig möglich. Bitte kontaktieren Sie uns.</p><p><br></p><p><strong>Funktioniert das POSModule auch mit der Shopify App für Android?</strong></p><p>Nein. POSModule funktioniert nur in Zusammenhang mit der iOS Shopify POS APP. Das Problem liegt hier nicht auf unserer Seite. Wir signieren einen Bon mit einer Referenz auf die Orginal-Rechnung, welches sich aus der "Order-Number" und der "Device ID" und der "Location-Number" zusammensetzt (1-12345-12). Shopify vergibt "Device IDs" für jedes Gerät das im Einsatz ist automatisch, dies können wir nicht beeinflussen. Das funktioniert wunderbar mit iOS aber nicht mit Android. Bei Android ist die Device-ID einfach leer. Damit kann nicht mehr auf den originalen Bon zurückgeschlossen werden und die Signatur wäre ungültig.&nbsp;</p><p><br></p><p>Kurz um: Shopify wurde für iOS gemacht, nicht für Android.</p><p><br></p><p><strong>Ich habe noch weitere Fragen</strong></p><p>Bitte zögern Sie nicht uns zu kontaktieren. Schreiben Sie uns oder rufen Sie uns an!</p><p><br></p><p><br></p></div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-section form1" id="form1-1c" data-rv-view="64" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form1" id="form1-1c" data-rv-view="33" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="ee9Ktjs08y75e5xQDOjuReJL58JCANQwfTIJQkx8uLwyortpPOUtXkkBpFL8uDQyhJ6FP35aQNM3WC5sfsz92mcpVmba26EpkvCArnW56SH7MRAUew+OJQ/2jsl+h9Ay" data-form-email="true">
+                        <input type="hidden" value="USBTTHQoKi7YclGszSAWJMwJOUQIKi3r45UB6wXP0JkfS1g1m5kDFgf/9fp8wW9w8hBSotp1GVbmmkHdT5SXvWVRWUyqikHmfFB83zj8R83j7iLwIjWRf55BjTDSa0+i" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -147,7 +147,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-p" data-rv-view="73" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-p" data-rv-view="42" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
