create github pages

--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section id="ext_menu-o" data-rv-view="26">
+<section id="ext_menu-o" data-rv-view="55">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free site creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="28" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/j">how to design a website for free</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="57" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-r" data-rv-view="31" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-r" data-rv-view="60" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -81,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section form1" id="form1-1c" data-rv-view="33" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form1" id="form1-1c" data-rv-view="62" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="USBTTHQoKi7YclGszSAWJMwJOUQIKi3r45UB6wXP0JkfS1g1m5kDFgf/9fp8wW9w8hBSotp1GVbmmkHdT5SXvWVRWUyqikHmfFB83zj8R83j7iLwIjWRf55BjTDSa0+i" data-form-email="true">
+                        <input type="hidden" value="Uy9vPC7YSozbSszQ6JRJjNJOA3Tf6mMxqoienZB1oTC1gcddnKICAfCf2RQM9zZ/Ms54WNPobtzlaluxUL1o9MPgMUKWK22XGHqJLku7LH5ZH4+MviG20dEXbxog4prp" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -147,7 +147,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-p" data-rv-view="42" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-p" data-rv-view="71" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
