--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section id="ext_menu-x" data-rv-view="93">
+<section id="ext_menu-x" data-rv-view="91">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build your own website for free</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" data-rv-view="90" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/c">website maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" data-rv-view="88" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section" id="testimonials1-1f" data-rv-view="95" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 80px;">
+<section class="mbr-section" id="testimonials1-1f" data-rv-view="93" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 80px;">
 
     
 
@@ -131,7 +131,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-1h" data-rv-view="104" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content1-1h" data-rv-view="102" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -141,7 +141,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-y" data-rv-view="106" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-y" data-rv-view="104" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
