create github pages

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free web page software</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" data-rv-view="75" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" data-rv-view="75" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -99,7 +99,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Vielen Dank für das Ausfüllen.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="NEWSLETTER">
-                        <input type="hidden" value="H9B0cloO7RYIAdOOJPJRARFD2VElB4952gVYIYkQlvJsL+p3hyN6mf2Qy534F74UK+17uuxIa//IePMvZdbiQed7ml5T8azbSNlaUBZv+DPUYZlInnDKVzuHY/bsQkTL" data-form-email="true">
+                        <input type="hidden" value="B3gbR4dzZDAuhiQRt9FoRK3O4egoEl274LKvGYT1lKneaPjU0e/49CvMNl31RcF/p16VSJ73QPs8CCBvMrZRv0pLx1R4I1Egu3fCjLZKQuQGjUADf0eeNFlOsHJVPEwm" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="max@mustermann.com" id="form2-w-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
