--- a/preise.html
+++ b/preise.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" data-rv-view="28" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/b">free web site creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" data-rv-view="28" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -174,7 +174,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Einmalig</h4>
                         <h5 class="card-subtitle">Einrichtung + Setup</h5>
-                        <p class="card-text">Wir verrechnen 29€ einmalig für Installation, Einrichtung und Beantragung der Zertifikate bei A-Trust. Dies ist einmal notwendig pro Kassa.</p>
+                        <p class="card-text">Wir verrechnen $99 direkt über Shopify einmalig für Installation, Einrichtung und Beantragung der Zertifikate bei A-Trust. Dies ist einmal notwendig pro Kassa.</p>
                         
                     </div>
                 </div>
@@ -237,7 +237,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="wMzcxPYBUB4CblyfRjfZuFoGODsIiI8bVXPEaJ2cvJTXzwqBnM8onMNde58c8SYUHWYOwCeItXEL/B3kjtm/lfbtTSPJkZwTUotChkkiR10JUy72UaTyFXOhw8uuUeLM" data-form-email="true">
+                        <input type="hidden" value="ILjm0WhACl4DxXl2z8S2Xm8EVrK3YGRwgg7Vj62mIcQCxup76hyfa6ji6nyerq8BKQs7iS/udB58Is3vSx/1ztimO3ZnRPYBnNKeRsOzdmbVpeEfrZ2NCNJhk7CVYSOe" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
