create github pages

--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section id="ext_menu-o" data-rv-view="55">
+<section id="ext_menu-o" data-rv-view="57">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build a website</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="57" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/g">how to create your own website</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="59" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-r" data-rv-view="60" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-r" data-rv-view="62" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -81,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section form1" id="form1-1c" data-rv-view="62" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form1" id="form1-1c" data-rv-view="64" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="u8NK3qfCV53mbfBFSHAPoSzl27UdZaEq+xcphycNVpavS+Hop7I6UM9NT9YIvCtn4X7lIrJ60FinSqR6uHfxEvhGlqkVR06Crm9U2sMJKL+iO4LHx2MLqZ8KRMBvxF4Z" data-form-email="true">
+                        <input type="hidden" value="yygXgH5bMpNcf9JFu6a+50arb+V1kdibCmM8Q6/8O+bVW8uQKtgkBG3huw7ecBUYpvoB33f78PGpvcYn4e0LtwODqWOhfKIoRx1AnK5iHGq7lll98wynIu+3ATCzo/5T" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -147,18 +147,26 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-p" data-rv-view="71" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-1o" data-rv-view="87" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24,<br>8020 Graz<br><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Kontakt</strong></span></font><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong><br></strong></span></font><br>
-Email: office@posmodule.com<br>Telefon: +43 660 799 48 97<br></p>
+                <div><img src="assets/images/icon-square-128x128.png"></div>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><li>Addon bei Shopify</li><br></ul></div>
-            <div class="col-xs-12 col-md-6">
-                <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJNUuTcpw1bkcRefWyN2qaTKQ" allowfullscreen=""></iframe></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24<br>8020 Graz</p>
             </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p><strong>Kontakt</strong><br>
+Email: office@posmodule.com<br>
+Telefon: +43 660 799 48 97<br><br></p>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p><strong>Mehr</strong><br>
+<a class="text-primary" href="agb.html">AGB</a><br><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">Posmodule auf Facebook</a><br><a href="http://apps.shopify.com/posmodule">Addon bei Shopify</a></p>
+            </div>
+
         </div>
     </div>
 </section>
