--- a/comingsoon.html
+++ b/comingsoon.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section id="ext_menu-s" data-rv-view="73">
+<section id="ext_menu-s" data-rv-view="89">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" data-rv-view="75" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/e">website authoring software</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" data-rv-view="91" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-v" data-rv-view="78" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 80px;">
+<section class="mbr-section article mbr-section__container" id="content1-v" data-rv-view="94" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 80px;">
 
     <div class="container">
         <div class="row">
@@ -81,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section form2" id="form2-w" data-rv-view="80" style="background-color: rgb(40, 50, 78); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form2" id="form2-w" data-rv-view="96" style="background-color: rgb(40, 50, 78); padding-top: 120px; padding-bottom: 120px;">
         
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -99,7 +99,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Vielen Dank für das Ausfüllen.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="NEWSLETTER">
-                        <input type="hidden" value="B3gbR4dzZDAuhiQRt9FoRK3O4egoEl274LKvGYT1lKneaPjU0e/49CvMNl31RcF/p16VSJ73QPs8CCBvMrZRv0pLx1R4I1Egu3fCjLZKQuQGjUADf0eeNFlOsHJVPEwm" data-form-email="true">
+                        <input type="hidden" value="veu+LwmGnSY5C1UmQ8l6m1NwGhS8BojEoDw6DT96j9Ce6UwQPEj/j5qaBOcqPcNSbaSnStpxLx/mXRdX0MbvN8g29Vb7UAlCtgCItbpipnEyAhO08ZogleEdDdTH8C9t" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="max@mustermann.com" id="form2-w-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -111,7 +111,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-t" data-rv-view="86" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-t" data-rv-view="102" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -119,7 +119,7 @@
                 <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24,<br>8020 Graz<br><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Kontakt</strong></span></font><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong><br></strong></span></font><br>
 Email: office@posmodule.com<br>Telefon: +43 660 799 48 97<br></p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><li>Addon bei Shopify</li><br></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li>POS Module auf Facebook</li><li><a href="http://apps.shopify.com/posmodule" target="_blank">Addon bei Shopify</a></li><br></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJNUuTcpw1bkcRefWyN2qaTKQ" allowfullscreen=""></iframe></div>
             </div>
