--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section id="ext_menu-x" data-rv-view="91">
+<section id="ext_menu-x" data-rv-view="107">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">web site maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" data-rv-view="88" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" data-rv-view="104" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section" id="testimonials1-1f" data-rv-view="93" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 80px;">
+<section class="mbr-section" id="testimonials1-1f" data-rv-view="109" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 80px;">
 
     
 
@@ -131,28 +131,26 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-1h" data-rv-view="102" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 60px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p><strong>Phillip Stecher</strong></p><p>Phillip programmiert Software für große Hotelketten. </p><p>Er schreibt die Schnittstelle zur Registrierkassenverordnung für das POS Module.&nbsp;</p></div>
-        </div>
-    </div>
-
-</section>
-
-<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-y" data-rv-view="104" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-1o" data-rv-view="123" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24,<br>8020 Graz<br><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Kontakt</strong></span></font><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong><br></strong></span></font><br>
-Email: office@posmodule.com<br>Telefon: +43 660 799 48 97<br></p>
+                <div><img src="assets/images/icon-square-128x128.png"></div>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><li>Addon bei Shopify</li><br></ul></div>
-            <div class="col-xs-12 col-md-6">
-                <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJNUuTcpw1bkcRefWyN2qaTKQ" allowfullscreen=""></iframe></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24<br>8020 Graz</p>
             </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p><strong>Kontakt</strong><br>
+Email: office@posmodule.com<br>
+Telefon: +43 660 799 48 97<br><br></p>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p><strong>Mehr</strong><br>
+<a class="text-primary" href="agb.html">AGB</a><br><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">Posmodule auf Facebook</a><br><a href="http://apps.shopify.com/posmodule">Addon bei Shopify</a></p>
+            </div>
+
         </div>
     </div>
 </section>
