create github pages

--- a/agb.html
+++ b/agb.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">bootstrap template</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3" data-rv-view="32" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3" data-rv-view="32" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
