--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">how to create your own website</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="59" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/c">free website maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="59" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="yygXgH5bMpNcf9JFu6a+50arb+V1kdibCmM8Q6/8O+bVW8uQKtgkBG3huw7ecBUYpvoB33f78PGpvcYn4e0LtwODqWOhfKIoRx1AnK5iHGq7lll98wynIu+3ATCzo/5T" data-form-email="true">
+                        <input type="hidden" value="vDv9l8mNkP4zB1waFXbrxS8qz2rf0MBO2iAhPcU/HdaqqwgR/rJ6MMppizOp2aYwXDjNKJkgT6K/cGExbWjC+nD1jgnvxUIRQ3238jCemDu1NohrIK8A3r5P7yfWGm39" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
