--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-1n" data-rv-view="2" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a href="https://mobirise.co/e">web authoring software</a></section><div id="header6-1n" custom-code="true" data-rv-view="2" class="mbr-after-navbar"><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" data-rv-view="2" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
@@ -71,17 +71,17 @@
                     <div class="mbr-table-md-up">
                         
                         <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 70%;">
-                            <div class="mbr-figure"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/m5ZrdgHPUH8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                            <div class="mbr-figure"><iframe class="mbr-embedded-video" src="https://www.youtube-nocookie.com/embed/m5ZrdgHPUH8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen=""></iframe></div>
                         </div>
                         <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
 
-                            <h3 class="mbr-section-title display-2">POS Module</h3>
+                            <h3 class="mbr-section-title display-2 mbr-editable-content">POS Module</h3>
 
                             <div class="mbr-section-text">
-                                <p>Das Shopify-Addon für die <br>österreichische Registrierkassensicherheitsverordnung <br>vom 1. April 2017</p>
+                                <p class="mbr-editable-content">Das Shopify-Addon für die <br>österreichische Registrierkassensicherheitsverordnung <br>vom 1. April 2017</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-lg btn-black-outline btn-black" href="http://apps.shopify.com/posmodule">Zum Addon</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-lg btn-black-outline btn-black mbr-editable-button" href="http://apps.shopify.com/posmodule">Zum Addon</a></div>
 
                         </div>
 
@@ -97,7 +97,7 @@
 
     <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#header3-b"><i class="mbr-arrow-icon"></i></a></div>
 
-</section>
+</section></div>
 
 <section class="mbr-section mbr-section__container article" id="header3-b" data-rv-view="5" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 20px;">
     <div class="container">
@@ -247,7 +247,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="wUbKfDj0U2ZEMk67ZsDZr94+mmLxgyYE5nu83byC7e8XXtirQRsZvOCTWgoMhcSwBeFb3+GcQFRNC4ZMClchdQk4BQP5WHox5GbitwZI53qjg9yvwQSi6f9/+5CQ67zi" data-form-email="true">
+                        <input type="hidden" value="3kRJb2tENOBW3fJU3a6kChIlJFGYoa11dBrj3W1lI3vXEZ/eXlOc16HAW+GIHI5+oIZuJ6tTPrSAw/LLIyNJPDU9GeMZndtlmuvDru/YH3oE8rd1Q4wM/Pr8Gdv/EV2c" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
