create github pages

--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">free website maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="59" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="59" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="vDv9l8mNkP4zB1waFXbrxS8qz2rf0MBO2iAhPcU/HdaqqwgR/rJ6MMppizOp2aYwXDjNKJkgT6K/cGExbWjC+nD1jgnvxUIRQ3238jCemDu1NohrIK8A3r5P7yfWGm39" data-form-email="true">
+                        <input type="hidden" value="WqAeKEhOt+XD46WkdBf8h1oK2dJnplu6h65ylKobkXabZBQ6gPaWRRAmcbynJ+6gIdo1T4TpHRbMSnS6PBP3wSuePwLEc3QvplM4DkvWKfEjAGGZyMHw7cyVCFLvW4ND" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
