create github pages

--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section id="ext_menu-x" data-rv-view="107">
+<section id="ext_menu-x" data-rv-view="87">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">website creation software</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" data-rv-view="104" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" data-rv-view="84" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section" id="testimonials1-1f" data-rv-view="109" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 80px;">
+<section class="mbr-section" id="testimonials1-1f" data-rv-view="89" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 80px;">
 
     
 
@@ -131,7 +131,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-1o" data-rv-view="123" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-1o" data-rv-view="98" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -139,7 +139,7 @@
                 <div><img src="assets/images/icon-square-128x128.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24<br>8020 Graz</p>
+                <p><strong>Adresse (Impressum)</strong><br>Craft-IT<br>Neubaugasse 24<br>8020 Graz</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Kontakt</strong><br>
@@ -148,7 +148,7 @@ Telefon: +43 660 799 48 97<br><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Mehr</strong><br>
-<a class="text-primary" href="agb.html">AGB</a><br><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">Posmodule auf Facebook</a><br><a href="http://apps.shopify.com/posmodule">Addon bei Shopify</a></p>
+<a class="text-primary" href="agb.html">AGB</a><br><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">Posmodule auf Facebook</a><br><a href="http://apps.shopify.com/posmodule">Addon bei Shopify</a><br><a href="assets/files/DSGVO%20Posmodule.pdf">Datenschutz und GDPR/DSGVO</a></p>
             </div>
 
         </div>
