--- a/comingsoon.html
+++ b/comingsoon.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section id="ext_menu-s" data-rv-view="89">
+<section id="ext_menu-s" data-rv-view="69">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build a website for free</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" data-rv-view="91" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/a">free site builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" data-rv-view="71" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-v" data-rv-view="94" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 80px;">
+<section class="mbr-section article mbr-section__container" id="content1-v" data-rv-view="74" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 80px;">
 
     <div class="container">
         <div class="row">
@@ -81,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section form2" id="form2-w" data-rv-view="96" style="background-color: rgb(40, 50, 78); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form2" id="form2-w" data-rv-view="76" style="background-color: rgb(40, 50, 78); padding-top: 120px; padding-bottom: 120px;">
         
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -99,7 +99,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Vielen Dank für das Ausfüllen.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="NEWSLETTER">
-                        <input type="hidden" value="WR6/QJVG8Ddds+1VWnoVfIUWGJLj/kAAPK2fjS8upEj3woX9bEAY1Cug4qscQdsYCqb0lLjD3RAdxROtxItwXybesUugLjKBhQCPOUM0vPPUX3nPWcBl9TwpP7ZmBqoy" data-form-email="true">
+                        <input type="hidden" value="EDQrhNIqLHVv3V1NsPo6q574HqXxZQ7vo2ipYkdzMQDYGE/UNyLnkCe+otRkqP+agP9fdjGv9N1jR8layPcat8lbsnvJNPMFb4w0363u8gb9GbAfYCMbAIm7KNw9s5xC" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="max@mustermann.com" id="form2-w-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -111,7 +111,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-t" data-rv-view="102" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-t" data-rv-view="82" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
