color on home page changed

--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="79" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="79" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="QGPzzISmFXMBgcSTTpUpI36D6jNhGqQJmBceOefWw0bC8UWUJpJoBmfvJMUZeeepd4E0PT9azUV03FtfQFxiUtbqUcx3tP7DH25PSzvHcI0RJnOnvBrDTAj04WzS7MKW" data-form-email="true">
+                        <input type="hidden" value="SurIHg/54aEqbnXJ0de1S/IhUgGiBsM0BipnfuNiFJTvRfK4i8EIkpqLrDU+jOUUECNzan1B8U1C5xLvzu0/uOeKTrKZQRKrBy+iqXN8slu7iaFN5KlTAnWOlwyA87Xz" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
