added imprint page

--- a/team.html
+++ b/team.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" data-rv-view="95" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" data-rv-view="95" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -139,16 +139,15 @@
                 <div><img src="assets/images/icon-square-128x128.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Adresse (Impressum)</strong><br>moving primates GmbH<br>Pass-Thurn-Straße 19<br>6380 St. Johann in Tirol<br>Österreich</p>
+                <p><strong>Adresse&nbsp;</strong><br>moving primates GmbH<br>Pass-Thurn-Straße 19<br>6380 St. Johann in Tirol<br>Österreich</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Kontakt</strong><br>
 Email: office@posmodule.com<br>
-Telefon: +49 89 25 55 19 110<br><br></p>
+Telefon: <a href="tel:+4989255519110">+49 89 25 55 19 110</a><br><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Mehr</strong><br>
-<a class="text-primary" href="agb.html">AGB</a><br><a href="https://www.facebook.com/posmodule" target="_blank">Posmodule auf Facebook</a><br><a href="http://apps.shopify.com/posmodule">Addon bei Shopify</a><br><a href="assets/files/DSGVO%20Posmodule.pdf">Datenschutz und GDPR/DSGVO</a></p>
+                <p><strong>Mehr</strong><br><a href="impressum.html">Impressum</a><br><a class="text-primary" href="agb.html">AGB</a><br><a href="https://www.facebook.com/posmodule" target="_blank">Posmodule auf Facebook</a><br><a href="http://apps.shopify.com/posmodule">Addon bei Shopify</a><br><a href="assets/files/DSGVO%20Posmodule.pdf">Datenschutz und GDPR/DSGVO</a></p>
             </div>
 
         </div>
