--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="79" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="79" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="SurIHg/54aEqbnXJ0de1S/IhUgGiBsM0BipnfuNiFJTvRfK4i8EIkpqLrDU+jOUUECNzan1B8U1C5xLvzu0/uOeKTrKZQRKrBy+iqXN8slu7iaFN5KlTAnWOlwyA87Xz" data-form-email="true">
+                        <input type="hidden" value="Y/PFvJRScOCEWB3W/j8LUdhhDLS3J58/8VQ58CR21xqiqaT40RUGeoc3iPR8hhz4PFww0m05lDt7bgzUQM0zr1TVI6HufEQ0tHa9miRU4MG+3ukqXFYyjdfgVTus7tTY" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -155,16 +155,15 @@
                 <div><img src="assets/images/icon-square-128x128.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Adresse (Impressum)</strong><br>moving primates GmbH<br>Pass-Thurn-Straße 19<br>6380 St. Johann in Tirol<br>Österreich</p>
+                <p><strong>Adresse&nbsp;</strong><br>moving primates GmbH<br>Pass-Thurn-Straße 19<br>6380 St. Johann in Tirol<br>Österreich</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Kontakt</strong><br>
 Email: office@posmodule.com<br>
-Telefon: +49 89 25 55 19 110<br><br></p>
+Telefon: <a href="tel:+4989255519110">+49 89 25 55 19 110</a><br><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Mehr</strong><br>
-<a class="text-primary" href="agb.html">AGB</a><br><a href="https://www.facebook.com/posmodule" target="_blank">Posmodule auf Facebook</a><br><a href="http://apps.shopify.com/posmodule">Addon bei Shopify</a><br><a href="assets/files/DSGVO%20Posmodule.pdf">Datenschutz und GDPR/DSGVO</a></p>
+                <p><strong>Mehr</strong><br><a href="impressum.html">Impressum</a><br><a class="text-primary" href="agb.html">AGB</a><br><a href="https://www.facebook.com/posmodule" target="_blank">Posmodule auf Facebook</a><br><a href="http://apps.shopify.com/posmodule">Addon bei Shopify</a><br><a href="assets/files/DSGVO%20Posmodule.pdf">Datenschutz und GDPR/DSGVO</a></p>
             </div>
 
         </div>
