changed main text color on homepage

--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="79" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="79" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="Y/PFvJRScOCEWB3W/j8LUdhhDLS3J58/8VQ58CR21xqiqaT40RUGeoc3iPR8hhz4PFww0m05lDt7bgzUQM0zr1TVI6HufEQ0tHa9miRU4MG+3ukqXFYyjdfgVTus7tTY" data-form-email="true">
+                        <input type="hidden" value="4hJPFNdYnGvWDMYwt1nmYSMYIpFdfPHzxNk7mu2yJE5+oSqVcEofL+dY2sXM3A8bT1I/luE5WZh9NnPEiZQW34q18xDNHK2MatEOJOXsW3H/BXjuiFdoDBFMb3+hHdyu" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
