--- a/impressum.html
+++ b/impressum.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-  <section id="ext_menu-x" data-rv-view="145">
+  <section id="ext_menu-x" data-rv-view="41">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -42,7 +42,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-f">SO GEHT'S</a></li><li class="nav-item"><a class="nav-link link" href="preise.html">&nbsp;PREISE</a></li><li class="nav-item"><a class="nav-link link" href="faq.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="team.html">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="http://apps.shopify.com/posmodule">BESTELLEN</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-f">SO GEHT'S</a></li><li class="nav-item"><a class="nav-link link" href="preise.html">&nbsp;PREISE</a></li><li class="nav-item"><a class="nav-link link" href="faq.html">FAQ</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="http://apps.shopify.com/posmodule">BESTELLEN</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3" data-rv-view="147" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3" data-rv-view="43" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-4" data-rv-view="150" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-4" data-rv-view="46" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -81,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content6-1u" data-rv-view="154" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content6-1u" data-rv-view="48" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -92,7 +92,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-1v" data-rv-view="156" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content1-1v" data-rv-view="50" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -102,7 +102,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1" data-rv-view="143" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1" data-rv-view="39" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>Copyright (c) 2019 Posmodule.</p>
